[package]
name = "wasm-pack-play"
version = "0.1.0"
authors = ["zhenwu.li <zhenwu.li@pixocial.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = {version = "0.12.9", features=["json"]}
wasm-bindgen-futures = "0.4.45"
web-sys = {version = "0.3.76", features = ["console", "WebGlRenderingContext", "WebGlBuffer", "WebGlProgram", "WebGlShader", "HtmlCanvasElement", "WebGlTexture", "WebGlUniformLocation", "ImageData"]}
base64 = "0.22.1"
nalgebra-glm = "0.19.0"
js-sys = "0.3.76"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
